@@ -35,17 +35,9 @@ AC_SUBST(LDFLAGS)
 dnl
 dnl Start of pkg-config checks
 dnl
-PKG_CHECK_MODULES(LIBGNOMECANVAS, libgnomecanvas-2.0 >= 1.96.0)
-AC_SUBST(LIBGNOMECANVAS_CFLAGS)
-AC_SUBST(LIBGNOMECANVAS_LIBS)
-
-PKG_CHECK_MODULES(LIBBONOBO, libbonobo-2.0 >= 1.97.0)
-AC_SUBST(LIBBONOBO_CFLAGS)
-AC_SUBST(LIBBONOBO_LIBS)
-
-PKG_CHECK_MODULES(LIBGNOME, libgnome-2.0 >= 1.96.0)
-AC_SUBST(LIBGNOME_CFLAGS)
-AC_SUBST(LIBGNOME_LIBS)
+PKG_CHECK_MODULES(BONOBOUI, libgnomecanvas-2.0 >= 1.96.0 libbonobo-2.0 >= 1.97.0 libgnome-2.0 >= 1.96.0)
+AC_SUBST(BONOBOUI_CFLAGS)
+AC_SUBST(BONOBOUI_LIBS)
 
 AC_OUTPUT([
 Makefile
