@@ -1,3 +1,12 @@
+2001-08-07  Martin Baulig  <baulig@suse.de>
+
+	* configure.in: Fix the PKG_CHECK_MODULES checks.
+	You need to check for all dependencies for any given target in a
+	single PKG_CHECK_MODULES command, otherwise you'll get duplicate
+	-ldl etc. into your *.la files.
+
+	* */Makefile.am: Use the correct _CFLAGS and _LIBS.
+
 2001-08-06  Darin Adler  <darin@bentspoon.com>
 
 	* configure.in: Use PKG_CHECK_MODULES instead of
